--- a/p8105_hw5_kw3103.md
+++ b/p8105_hw5_kw3103.md
@@ -377,14 +377,25 @@ Create a spaghetti plot
 
 ``` r
 tidy_data %>% 
-  ggplot(aes(x = week, y =observation, color = as.factor(subject_ID))) +
+  ggplot(aes(x = week, y = observation, color = as.factor(subject_ID))) +
   geom_point() +
-  geom_line(aes(group = subject_ID), alpha=0.5) +
+  geom_line(aes(group = subject_ID), alpha = 0.5) +
   facet_grid(~group) +
   labs(x = "Week", y = "Observation", col = "Subject ID")
 ```
 
 <img src="p8105_hw5_kw3103_files/figure-gfm/unnamed-chunk-17-1.png" width="90%" />
+
+- Compared with the control group, the observed values of the
+  experimental group showed a significant upward trend over time.
+
+- There were slight differences in the results observed within the
+  groups, but the lines of observation generally followed a similar
+  pattern for most subjects.
+
+- Comparing the line trajectories of the control group and the
+  experimental group, there was no significant difference in the rate of
+  change of the observed values over time.
 
 ## Problem 3
 
@@ -488,3 +499,14 @@ ggplot(average_estimate_results, aes(x = mu, y = avg_estimate, group = 1)) +
 ```
 
 <img src="p8105_hw5_kw3103_files/figure-gfm/unnamed-chunk-22-1.png" width="90%" />
+
+- When the effect size is less than 4 (in this case), when the null
+  hypothesis is rejected, the μ̂ (sample average) differs from the truth
+  value of mu, and the T-value (a statistic) is always greater than the
+  truth value of mu. This is because the effect size is relatively small
+  and the efficacy is relatively low.
+
+- When the effect size is greater than or equal to 4 (in this case), the
+  sample average of μ̂ is roughly equal to the true value of mu when the
+  null hypothesis is rejected. This is because as the effect size
+  increases, so does the efficacy.
